--- a/_common.scss
+++ b/_common.scss
@@ -92,3 +92,51 @@ nav{
     font-family: $logo-font;
 }
 
+footer{
+
+
+    .grid-footer{
+        padding: 280px 176px 114px 176px;
+        display: grid;
+        grid-template-columns: 40% 15% 15% 15% 15%;
+
+           
+    }
+
+    h3{
+        font-size: 22px;
+        font-weight: 770;
+        text-align: inherit;
+        margin-bottom:  20px;
+    }
+    .btn{
+        font-size: 16px;
+        font-weight: 760;
+        color: black;
+        font-family: $text-font;
+        justify-content: flex-start;
+        align-items: start;
+        height: auto;
+        margin-bottom: 12px;
+    }
+    p{
+        font-size: 16px;
+        font-weight: 760;
+        
+        line-height: normal;
+    }
+    .desk{
+        max-width: 270px;
+    }
+    .all-right{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 60px;
+        background: $accent-color;
+        color: #FFF;
+        text-align: center;
+    }
+}
+
