fixed desktop version

--- a/_common.scss
+++ b/_common.scss
@@ -7,8 +7,7 @@ $accent-color: linear-gradient(#64BB47, #2C9553);
 
 *{
     box-sizing: border-box;
-    margin: 0;
-    max-width: 1440px;
+    margin: 0; 
     
     
 }
@@ -19,7 +18,7 @@ a{
 }
 
 .conteiner{
-    max-width: 1440px;
+    //max-width: 1440px;
     margin: 0 auto;
 }
 
@@ -59,9 +58,9 @@ a{
 }
 
 header {
-    padding: 40px 68px 0px 70px;
+    padding: 33px 54px 0px 77px;
     display: flex;
-    //justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
     font-family: $secondary-font;
     font-size: 20px;
@@ -77,15 +76,23 @@ header {
     }
 }
 
+.navi{
+    display: flex;
+
+}
+.right{
+    align-items: center;
+}
+
 nav{
     display: flex;
     justify-content: center;
-    gap: 40px;
-    margin-right: 379px;
+    gap: 48px;
+    //margin-right: 379px;
 }
 
 .logo{
-    margin-right: 160px;
+    margin: auto  148px auto auto;
     font-size: 26px;
     font-style: normal;
     font-weight: 500;
@@ -96,10 +103,11 @@ footer{
 
 
     .grid-footer{
-        padding: 280px 176px 114px 176px;
+        padding: 256px 100px 100px 176px;
         display: grid;
-        grid-template-columns: 40% 15% 15% 15% 15%;
-
+        grid-template-columns: 36% 17% 15% 17% 15%;
+        max-width: 2000px;
+        margin: 0 auto;
            
     }
 
@@ -137,6 +145,50 @@ footer{
         background: $accent-color;
         color: #FFF;
         text-align: center;
+        position: relative;
+        left: 5px;
+    }
+
+    .logo{
+        margin: 15px 148px 36px auto;
+        
+    }
+}
+
+.icon-btn{
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    height: 24px;
+}
+
+
+/*@media(max-width: 850px){
+    .mobile-only {
+        display: none !important;
+        
+        
+    
+    }
+    .img{
+        width: 50px;
+        height: 50px;
+    }
+
+    .desktop-only {
+        display: none !important;
+            
+    }
+    .mobile-nav{
+    position: absolute;
+    flex-direction: column;
+    right: 0;
+    top: 74px;
+    //background-color: $card-background-color;
+    align-items: flex-end;
+    width: 100%;
+    transition: all .4s ease;
+    transform: translateX(100%);
     }
 }
 
