--- a/main.scss
+++ b/main.scss
@@ -45,42 +45,49 @@ h3{
 
 #hero{
     display: flex;  
-    height: 886px;  
+    justify-content: center;
+    //height: 886px;  
 
     h1{
         font-family: $main-font;
         font-size: 76px;
         font-style: normal;
         font-weight: 770;
-        width: 596px;
+        line-height: 100px;
         margin-bottom: 30px;
     }
 
-    .hero-content{
-        margin: 0;
-        padding: 179px 0 0 135px;
-        width: 596px;
-        height: 531px;
-        
-
-    }
-
+    
     p{
         line-height: 34px;
         margin-bottom: 50px;
-        width: 504px;
+        //width: 504px;
     }
 
     .green-color{
         color: #5FB848;
     }
     
+    .grid-block{
+        display: grid;
+        padding: 145px 135px 0 175px;
+        grid-template-columns: 60% 40%;
+        grid-auto-rows: 720px;
+        max-width: 2000px;
+
+    }
+    .hero-card{
+        position: relative;
+        right: 295px;
+        top: -214px;
+    }
+
 
 }
 
 #why-choose-us{
     
-    padding: 20px 215px 0 215px;
+    padding: 20px 200px 0 230px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -105,7 +112,7 @@ h3{
     }
 
     h3{
-        margin-bottom: 18px;
+        margin-bottom: 25px;
         
         &.num{
             font-family: $bold-font;
@@ -125,7 +132,8 @@ h3{
         font-style: normal;
         font-weight: 750;
         line-height: 28px;
-        margin-bottom: 60px;
+        margin-bottom: 25px;
+        //margin-bottom: 60px;
     }
 
     .numbers{
@@ -139,13 +147,15 @@ h3{
 
 #about-us{
     display: flex;
-    padding: 120px 70px 0 135px;
+    justify-content: center;
+    padding: 200px 70px 0 147px;
     height: 722px;
     gap: 95px;    
     align-items: center;
+    margin: 0 auto;
         
     h2{
-        margin-bottom: 30px;
+        margin-bottom: 38px;
         text-align: left;
     }
 
@@ -179,10 +189,12 @@ h3{
 
 #fresh-vegetables{
     display: flex;
-    padding: 140px 70px 0 135px;
+    justify-content: center;
+    padding: 200px 120px 0 135px;
     height: 722px;
-    gap: 95px;
+    gap: 70px;
     align-items: center;
+    max-width: 2000px;
     
     h2{
         margin-bottom: 30px;
@@ -191,6 +203,7 @@ h3{
 
     p{
         margin-bottom: 40px;
+        font-size: 22px;
         
     }
 
@@ -206,26 +219,29 @@ h3{
 
 #best-chefs{
     display: flex;
-    padding: 80px 168px 0 135px;
-    height: 722px;
-    gap: 31px;
-    align-items: center;
+    justify-content: center;
+    padding: 130px 40px 0 135px;
+    gap: 35px;
+    align-items: flex-start;
+    max-width: 2000px;
     h2{
-        margin-bottom: 30px;
+        margin-bottom: 35px;
         text-align: left;
+        line-height: 70px;
     }
 
     p{
-        //margin-bottom: 40px;
+        font-size: 20px;
         
     }
     .m-bottom{
         margin-bottom: 30px;
+        font-size: 22px;
     }
     .check{
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 10px;
 
         
     }
@@ -245,30 +261,44 @@ h3{
         height: 20px;
 
     }
+    .best-chefs-cards{
+        position: relative;
+        top: -60px;
+    }
 }
 
 #special-dishes{
-    padding: 177px 135px 0 135px;
+    padding: 64px 118px 0 135px;
+    max-width: 2000px;
+    margin: 0 auto;
     p{
         text-align: center;
         margin-bottom: 60px;
         &.mini{
             font-size: 18px;
             line-height: 28px;
+            margin: 0 20px;
+            margin: 0 20px 50px 20px;
         }
+    }
+    
+
+    h3{
+        margin-bottom: 25px;
+        margin-top: 20px;
     }
 
     .flex-dishes{
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 51px;
+        gap: 50px;
         margin-bottom: 60px;
     }
 
     .info{
-        width: 356px;
-        height: 520px;
+        //width: 356px;
+        //height: 520px;
         background-color:#fff;
         border: 1px solid #EBEBEB;
         border-radius: 20px;
@@ -288,22 +318,27 @@ h3{
 }
 
 #happy-clients{
-    padding: 190px 193px 0 194px;
-    
+    padding: 178px 180px 0 194px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     
     h2{
         margin-bottom: 47px;
     }
     h3 {
         font-size: 20px;
-        margin-bottom: 3px;
+        margin-top: 20px;
+        margin-bottom: -8px;
     }
     
     p{
         font-size: 18px;
         font-weight: 750;
         margin-left: 25px;
-        margin-right: 25px;
+        margin-right: 10px;
+        line-height: 30px;
     }
 
     .avatar-info{
@@ -315,20 +350,20 @@ h3{
     .avatars{
         display: grid;
         grid-template-columns: 50% 50%;
-        gap: 25px;
+        gap: 15px;
         margin-bottom: 50px;
     }
     .avatar{
         display: grid;
-        grid-template-columns: 25% 75%;
-        margin-bottom: 32px;
-        margin-top: 40px;
-        margin-left: 25px;
+        grid-template-columns: 26% 74%;
+        margin-bottom: 30px;
+        margin-top: 45px;
+        margin-left: 21px;
     }
     .name{
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        //justify-content: center;
         align-items: flex-start;
     }
     .ava{
@@ -350,21 +385,31 @@ h3{
 }
 
 #subscription{
-    padding: 190px 0 0 0;
+    padding: 185px 0 0 7px;
 
     p{
         text-align: center;
-        margin-bottom: 60px;
+        margin-bottom: 59px;
+        
     }
+
+    h2{
+        font-size: 36px;
+       
+    }
+
 
     .btn{
         margin: 0 auto 0 0;
+        width: 170px;
+        font-size: 20px;
     }
     .email-item{
         display: flex;
         gap: 15px;
     }
     .email{
+        font-family: $text-font;
         display: flex;
         align-items: center;
         width: 330px;
@@ -376,6 +421,8 @@ h3{
         margin: 0 0 0 auto;
         font-size: 18px;
         font-weight: 750;
+        outline: none;
+        padding-left: 24px;
     }
 }
 
