--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ a {
   text-decoration: none;
 }
 
-.conteiner {
+.container {
   margin: 0 auto;
 }
 
@@ -119,7 +119,6 @@ footer .all-right {
   color: #FFF;
   text-align: center;
   position: relative;
-  left: 5px;
 }
 footer .logo {
   margin: 15px 148px 36px auto;
@@ -132,28 +131,6 @@ footer .logo {
   height: 24px;
 }
 
-@media (max-width: 850px) {
-  .mobile-only {
-    display: none !important;
-  }
-  .img {
-    width: 50px;
-    height: 50px;
-  }
-  .desktop-only {
-    display: none !important;
-  }
-  .mobile-nav {
-    position: absolute;
-    flex-direction: column;
-    right: 0;
-    top: 74px;
-    align-items: flex-end;
-    width: 100%;
-    transition: all 0.4s ease;
-    transform: translateX(100%);
-  }
-}
 p {
   font-family: "SharpSansNo1-Thin";
   font-size: 24px;
@@ -164,6 +141,10 @@ p {
 p.content {
   font-size: 18px;
   line-height: 28px;
+}
+
+.des-only {
+  display: none;
 }
 
 h2 {
@@ -269,7 +250,6 @@ h3 {
   display: flex;
   justify-content: center;
   padding: 200px 70px 0 147px;
-  height: 722px;
   gap: 95px;
   align-items: center;
   margin: 0 auto;
@@ -288,7 +268,6 @@ h3 {
 }
 #about-us .about-us-cards {
   display: flex;
-  height: 722px;
   gap: 20px;
 }
 #about-us .left {
@@ -507,4 +486,267 @@ h3 {
   font-weight: 750;
   outline: none;
   padding-left: 24px;
+}
+
+@media (max-width: 850px) {
+  .des-only {
+    display: block;
+  }
+  .desktop-only {
+    display: block;
+  }
+  header {
+    padding: 20px 20px 0px 20px;
+  }
+  img {
+    width: 180px;
+    height: 180px;
+  }
+  img.logo {
+    width: auto;
+    height: auto;
+  }
+  h2 {
+    font-size: 40px;
+    line-height: 50px;
+    margin-bottom: 330px;
+    text-align: center;
+  }
+  p {
+    font-family: "SharpSansNo1-Thin";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 750;
+    line-height: 34px;
+  }
+  p.content {
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .btn {
+    margin: 0 auto;
+  }
+  #hero h1 {
+    font-size: 40px;
+    line-height: 50px;
+    margin-bottom: 330px;
+    text-align: center;
+  }
+  #hero img {
+    width: 400px;
+    height: 400px;
+    margin: 0 0 0 240px;
+    position: relative;
+    top: -455px;
+  }
+  #hero p {
+    margin-bottom: 30px;
+  }
+  #hero .grid-block {
+    grid-template-columns: 100%;
+    grid-auto-rows: auto;
+    padding: 40px 40px 0 40px;
+  }
+  #why-choose-us {
+    padding: 20px 40px 0 40px;
+  }
+  #why-choose-us h2 {
+    margin-bottom: 15px;
+  }
+  #why-choose-us h3 {
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+  #why-choose-us h3.num {
+    font-size: 24px;
+  }
+  #why-choose-us p {
+    margin-bottom: 32px;
+  }
+  #why-choose-us p.p-numbers {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  #why-choose-us img {
+    width: 70px;
+    height: 70px;
+  }
+  #why-choose-us .content {
+    gap: 20px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  #why-choose-us .new-line {
+    word-spacing: 10px;
+  }
+  #why-choose-us .numbers {
+    gap: 30px;
+  }
+  #about-us {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 70px 30px 0 30px;
+    align-items: center;
+    margin: 0 auto;
+    height: auto;
+  }
+  #about-us h2 {
+    text-align: center;
+  }
+  #about-us p {
+    font-size: 20px;
+    width: auto;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  #about-us .about-us-cards {
+    display: flex;
+    gap: 20px;
+    position: relative;
+    top: -60px;
+  }
+  #about-us img {
+    width: 180px;
+    height: 180px;
+  }
+  #about-us .right-img {
+    height: 360px;
+  }
+  #fresh-vegetables {
+    padding: 0 30px 0 30px;
+    margin-top: -180px;
+    height: auto;
+    gap: 0;
+    flex-direction: column;
+  }
+  #fresh-vegetables .fresh-vegetables-cards {
+    position: relative;
+    top: 550px;
+  }
+  #fresh-vegetables h2 {
+    text-align: center;
+  }
+  #fresh-vegetables p {
+    text-align: center;
+    margin-bottom: 250px;
+  }
+  #best-chefs {
+    padding: 70px 40px 0 40px;
+    gap: 0;
+    flex-direction: column;
+  }
+  #best-chefs h2 {
+    text-align: center;
+    line-height: 50px;
+  }
+  #best-chefs .m-bottom {
+    text-align: center;
+  }
+  #best-chefs .best-chefs-cards {
+    position: relative;
+    top: 0;
+    margin: 0 auto;
+  }
+  #special-dishes {
+    padding: 70px 40px 0 40px;
+  }
+  #special-dishes h2 {
+    margin-bottom: 30px;
+  }
+  #special-dishes p {
+    margin-bottom: 20px;
+  }
+  #special-dishes .flex-dishes {
+    gap: 10px;
+    margin-bottom: 30px;
+  }
+  #happy-clients {
+    padding: 70px 40px 0 40px;
+  }
+  #happy-clients .avatars {
+    grid-template-columns: 1fr;
+    margin-bottom: 20px;
+  }
+  #happy-clients .ava {
+    width: auto;
+    height: auto;
+  }
+  #happy-clients .avatar {
+    grid-template-columns: 30% 70%;
+    margin-top: 25px;
+    margin-left: 20px;
+  }
+  #happy-clients .name {
+    margin-left: 20px;
+  }
+  #happy-clients .arrows {
+    width: auto;
+    height: auto;
+  }
+  #happy-clients img {
+    width: 90px;
+    height: 90px;
+  }
+  #subscription {
+    padding: 70px 40px 0 40px;
+  }
+  #subscription h2 {
+    margin-bottom: 10px;
+  }
+  #subscription p {
+    margin-bottom: 20px;
+  }
+  #subscription .email {
+    text-align: center;
+  }
+  #subscription .btn {
+    margin: 0 auto;
+  }
+  #subscription .email-item {
+    flex-direction: column;
+  }
+  footer .grid1 {
+    grid-row: 1;
+    grid-column: 1/5;
+  }
+  footer .grid2 {
+    grid-row: 2;
+  }
+  footer .grid-footer {
+    padding: 70px 30px 70px 30px;
+    grid-template-columns: 20% 20% 20% 20%;
+    gap: 10px;
+  }
+  footer .btn {
+    font-size: 14px;
+  }
+  footer h3 {
+    font-size: 18px;
+  }
+  footer .desk {
+    margin-bottom: 20px;
+  }
+  .img {
+    width: 50px;
+    height: 50px;
+  }
+  .desktop-only {
+    display: none !important;
+  }
+  .mobile-nav {
+    position: absolute;
+    flex-direction: column;
+    right: 20px;
+    top: 74px;
+    align-items: flex-end;
+    width: 100%;
+    background-color: white;
+    transform: translateX(100%);
+    transition: all 0.4s ease;
+  }
+  .hero-card {
+    width: 100px;
+    height: 30px;
+  }
 }/*# sourceMappingURL=main.css.map */
