--- a/main.scss
+++ b/main.scss
@@ -14,7 +14,9 @@ p{
         }       
         
 }
-
+.des-only{
+    display: none;
+}
 
 h2{
     color: #151414;
@@ -149,7 +151,7 @@ h3{
     display: flex;
     justify-content: center;
     padding: 200px 70px 0 147px;
-    height: 722px;
+    //height: 722px;
     gap: 95px;    
     align-items: center;
     margin: 0 auto;
@@ -171,7 +173,7 @@ h3{
     
     .about-us-cards{
         display: flex;
-        height: 722px;
+        //height: 722px;
         gap: 20px;
                 
     }
@@ -423,6 +425,327 @@ h3{
         font-weight: 750;
         outline: none;
         padding-left: 24px;
+    }
+}
+
+
+@media(max-width: 850px){
+    .des-only {
+        display:block;
+    }
+    .desktop-only {
+        display:block;
+    }
+    header{
+        padding: 20px 20px 0px 20px;
+    }
+    
+    img{
+        width: 180px;
+        height: 180px;
+        &.logo{
+            width: auto;
+            height: auto;
+        }
+    }
+
+    h2{
+        font-size: 40px;    
+        line-height: 50px;
+        margin-bottom: 330px;
+        text-align: center;
+        
+    }
+
+    p{
+        font-family: $text-font;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 750;
+        line-height: 34px;
+        
+        &.content{
+            font-size: 18px;
+            line-height: 28px;
+        }       
+        
+    }
+    .btn{
+        margin: 0 auto;
+    }
+    
+
+    #hero{
+        
+        h1{
+            font-size: 40px;    
+            line-height: 50px;
+            margin-bottom: 330px;
+            text-align: center;
+            
+        }
+        img{
+            width: 400px;
+            height: 400px;
+            margin: 0 0 0 240px;
+            position: relative;
+            top: -455px;
+        }
+        p{
+            margin-bottom: 30px;
+        }
+        .grid-block{
+            grid-template-columns: 100%;
+            grid-auto-rows: auto;
+            padding: 40px 40px 0 40px
+        }
+    }
+
+    #why-choose-us{
+        padding: 20px 40px 0 40px;
+
+        h2{
+            margin-bottom: 15px;
+        }
+        h3{
+            font-size: 18px;
+            margin-bottom: 15px;
+            &.num{
+                font-size: 24px;
+            }
+        }
+        p{
+            margin-bottom: 32px;
+            &.p-numbers{
+                font-size: 14px;
+                line-height: 20px;
+            }
+        }
+        img{
+            width: 70px;
+            height: 70px;
+        }
+        .content{
+            gap: 20px;
+            font-size: 14px;
+            line-height: 20px;
+        }
+        .new-line{
+            word-spacing: 10px;
+        }
+
+        .numbers{
+            gap: 30px;
+        }
+    }
+
+    #about-us{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 70px 30px 0 30px;
+        align-items: center;
+        margin: 0 auto;
+        height: auto;
+
+        h2{
+            text-align: center;
+        }
+        p{
+            font-size: 20px;
+            width: auto;
+            margin-bottom: 30px;
+            text-align: center;
+        }
+        
+        .about-us-cards {
+            display: flex;
+            //flex-direction: column;
+            gap: 20px;
+            position: relative;
+            top: -60px;
+        
+        }
+
+        img{
+            width: 180px;
+            height: 180px
+        }
+        .right-img{
+            height: 360px;
+        }
+
+
+    }
+
+
+    #fresh-vegetables{
+        padding: 0 30px 0 30px;
+        margin-top: -180px;
+        height: auto;
+        gap:0;
+        flex-direction: column;
+        
+        .fresh-vegetables-cards{
+            position: relative;
+            top: 550px;
+        }
+
+        h2{
+            text-align: center;
+        }
+        p{
+            text-align: center;
+            margin-bottom: 250px;
+        }
+        
+
+    }
+
+    #best-chefs {
+        padding: 70px 40px 0 40px;
+        gap: 0 ;  
+        flex-direction: column;   
+        
+        h2{
+            text-align: center; 
+            line-height: 50px;
+        }
+        .m-bottom{
+            text-align: center; 
+        }
+        .best-chefs-cards {
+            position: relative;
+            top: 0;
+            margin: 0 auto;
+        }
+    }
+
+    #special-dishes {
+        padding: 70px 40px 0 40px;
+        //margin-bottom: 30px;
+        h2{
+            margin-bottom: 30px;
+        }
+        p{
+            margin-bottom: 20px;
+        }
+        .flex-dishes {
+            gap: 10px;
+            margin-bottom: 30px;}
+
+    
+    }
+
+    #happy-clients {
+        padding: 70px 40px 0 40px;
+
+        .avatars {
+            grid-template-columns: 1fr;
+            margin-bottom: 20px;
+        }
+        .ava {
+            width: auto; 
+            height: auto;
+        }
+        .avatar {
+            grid-template-columns: 30% 70%;
+            margin-top: 25px;
+            margin-left: 20px;
+        }
+        .name {
+            
+            margin-left: 20px;
+        }
+
+        .arrows{
+            width: auto;
+            height: auto;
+        }
+
+        img {
+            width: 90px;
+            height: 90px;
+        }
+
+    }
+
+    #subscription {
+        padding: 70px 40px 0 40px;
+
+        h2 {
+            margin-bottom: 10px;
+        }
+
+        p {
+            margin-bottom: 20px;
+        }
+
+        .email {
+            text-align: center;
+        }
+        .btn {
+            margin: 0 auto;
+        }
+        .email-item {
+            flex-direction: column;
+        }
+
+    }
+
+    footer{
+        .grid1{
+            grid-row: 1;
+            grid-column: 1/5;
+        }
+        .grid2{
+            grid-row: 2;
+        }
+        .grid-footer {
+            padding: 70px 30px 70px 30px;
+            grid-template-columns: 20% 20% 20% 20%;
+            gap: 10px;
+        }
+
+        .btn {
+            font-size: 14px;
+        }
+        h3 {
+            font-size: 18px;
+        }
+        .desk {
+            margin-bottom: 20px;
+        }
+    }
+
+
+
+    
+    .img{
+        width: 50px;
+        height: 50px;
+    }
+
+    .desktop-only {
+       display: none !important;
+            
+    }
+    .mobile-nav{
+    position: absolute;
+    flex-direction: column;
+    right: 20px;
+    top: 74px;
+    align-items: flex-end;
+    width: 100%;
+    background-color: white;
+    transform: translateX(100%);
+    transition: all .4s ease;
+    //transform: translateX(0);
+    }
+
+    .hero-card{
+        width: 100px;
+        height: 30px;
     }
 }
 
