--- a/main.scss
+++ b/main.scss
@@ -429,7 +429,7 @@ h3{
 }
 
 
-@media(max-width: 850px){
+@media(max-width: 1200px){
     .des-only {
         display:block;
     }
@@ -483,16 +483,20 @@ h3{
             margin-bottom: 330px;
             text-align: center;
             
+            
+            
         }
         img{
             width: 400px;
             height: 400px;
             margin: 0 0 0 240px;
-            position: relative;
-            top: -455px;
+            position: absolute;
+            top: -350px;
+            left: 50px;
         }
         p{
             margin-bottom: 30px;
+            position: relative;
         }
         .grid-block{
             grid-template-columns: 100%;
@@ -588,17 +592,22 @@ h3{
         
         .fresh-vegetables-cards{
             position: relative;
-            top: 550px;
+            top: 390px;
+            left: 150px;
         }
 
         h2{
             text-align: center;
+            margin: 0 auto 30px auto;
         }
         p{
             text-align: center;
             margin-bottom: 250px;
         }
-        
+        img {
+            width: 45%;
+            height: 55%;
+    }
 
     }
 
@@ -610,6 +619,7 @@ h3{
         h2{
             text-align: center; 
             line-height: 50px;
+            margin: 0 auto 35px auto;
         }
         .m-bottom{
             text-align: center; 
@@ -618,6 +628,12 @@ h3{
             position: relative;
             top: 0;
             margin: 0 auto;
+        }
+        .chef-foto{
+            width: 65%;
+            height: 65%;
+            position: relative;
+            left: 120px;
         }
     }
 
@@ -683,6 +699,7 @@ h3{
 
         .email {
             text-align: center;
+            margin: 0 auto;
         }
         .btn {
             margin: 0 auto;
@@ -696,14 +713,14 @@ h3{
     footer{
         .grid1{
             grid-row: 1;
-            grid-column: 1/5;
+            grid-column: 2/5;
         }
         .grid2{
             grid-row: 2;
         }
         .grid-footer {
             padding: 70px 30px 70px 30px;
-            grid-template-columns: 20% 20% 20% 20%;
+            grid-template-columns: 10% 20% 20% 20% 20% 10%;
             gap: 10px;
         }
 
@@ -749,4 +766,58 @@ h3{
     }
 }
 
+@media (max-width: 800px){
+    #hero img {
+        width: 400px;
+        height: 400px;
+        margin: 0 0 0 240px;
+        position: absolute;
+        top: -350px;
+    
+    }
+    #fresh-vegetables{ 
+        .fresh-vegetables-cards {
+            position: relative;
+            top: 450px;
+            left: 170px;
+        }
+    }
+}
 
+@media (max-width: 500px){
+    #hero img {
+        top: -440px;
+        left: 10px;
+    }
+
+    #fresh-vegetables {
+        padding: 40px 30px 0 30px;
+
+        .fresh-vegetables-cards {
+            position: relative;
+            top: 510px;
+            left: 90px;
+        }
+        img {
+            width: 55%;
+            height: 55%;
+        }   
+    }
+
+    #best-chefs {
+        .chef-foto {
+            left: 60px;
+            top: 30px;
+        }
+    }
+
+    footer {
+        .grid-footer {
+            grid-template-columns: 1% 20% 20% 20% 20% 5%;
+            
+        }
+    }
+
+    
+
+}
