--- a/_common.scss
+++ b/_common.scss
@@ -69,6 +69,9 @@ header {
 }
 .nav-link{
     color: #2C3847;
+    &.last{
+        margin-bottom: 20px;
+    }
     
     &.green{
         color: #5FB848;
