--- a/main.scss
+++ b/main.scss
@@ -342,7 +342,17 @@ h3{
         margin-right: 10px;
         line-height: 30px;
     }
-
+    .ava{
+        flex-shrink: 0;
+        box-shadow: 10px 20px 70px 0px rgba(71, 68, 68, 0.08), -15px 0px 81px 0px #FFF;
+        background-color:#fff;
+        border: 1px solid #EBEBEB;
+        border-radius: 20px;
+        
+        &:first-child{
+            transition: all .4s ease;
+        }
+    }
     .avatar-info{
         font-size: 14px;
         font-weight: 760;
@@ -350,10 +360,14 @@ h3{
     }
 
     .avatars{
-        display: grid;
-        grid-template-columns: 50% 50%;
+        display: flex;
+        flex-shrink: 0;
+        //display: grid;
+        //grid-template-columns: 50% 50%;
         gap: 15px;
         margin-bottom: 50px;
+        max-width: 1050px;
+        overflow: hidden;
     }
     .avatar{
         display: grid;
@@ -372,17 +386,18 @@ h3{
         width: 514px;
         height: 347px;
     }
+    .icons{
+        display: flex;
+        
+
+    }
     .arrows{
         display: flex;
         margin: 0 auto;
+        background: white;
+        border: white;
     }
-    .left{
-        box-shadow: 10px 20px 70px 0px rgba(71, 68, 68, 0.08), -15px 0px 81px 0px #FFF;
-        background-color:#fff;
-        border: 1px solid #EBEBEB;
-        border-radius: 20px;
-        
-    }
+    
 
 }
 
@@ -657,7 +672,9 @@ h3{
         padding: 70px 40px 0 40px;
 
         .avatars {
-            grid-template-columns: 1fr;
+            display: flex;
+            flex-shrink: 0;
+            //grid-template-columns: 1fr;
             margin-bottom: 20px;
         }
         .ava {
@@ -757,7 +774,13 @@ h3{
     background-color: white;
     transform: translateX(100%);
     transition: all .4s ease;
-    //transform: translateX(0);
+    margin-bottom: 30px;
+
+    &.visible {
+        transform: translateX(0);
+        z-index: 1;
+        
+      }
     }
 
     .hero-card{
